--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -17,6 +17,7 @@
         <!--other-->
         <title>注册</title>
         <link rel="stylesheet" href="css/signin.css">
+        <script src="js/register.js"></script>
 
     </head>
     <body class="text-center">
@@ -25,12 +26,10 @@
                 <h2 class="font-weight-normal ml-1">注册信息</h2>
                 <img class="mr-1" src="image/register_logo.png" alt="" width="53" height="72">
             </div>
-            <input type="text" id="userName" class="form-control" onkeyup="verifyBlank(this)" placeholder="账号" required
-                   autofocus>
-            <input type="password" id="passWord" class="form-control" onkeyup="verifyBlank(this)" placeholder="密码"
-                   required>
+            <input type="text" id="userName" class="form-control" onkeyup="verifyBlank(this)" placeholder="账号" autofocus>
+            <input type="password" id="passWord" class="form-control" onkeyup="verifyBlank(this)" placeholder="密码">
             <div class="text-center">
-                <button class="btn btn-sm btn-primary">注册</button>
+                <button class="btn btn-sm btn-primary" id="btn-register" onclick="register()">注册</button>
             </div>
             <p class="mt-5 mb-3 text-muted">&copy; 2019-2029</p>
 
